[gd_scene load_steps=6 format=2]

[ext_resource path="res://scripts/Game.gd" type="Script" id=1]
[ext_resource path="res://scenes/Characters/Character.tscn" type="PackedScene" id=2]
[ext_resource path="res://scenes/Floor.tscn" type="PackedScene" id=3]
[ext_resource path="res://resource/click.wav" type="AudioStream" id=4]
[ext_resource path="res://resource/beep.wav" type="AudioStream" id=5]

[node name="Game" type="Node2D"]
script = ExtResource( 1 )

[node name="Background" type="Panel" parent="."]
margin_right = 1920.0
margin_bottom = 1080.0

[node name="RythmSignal" type="Panel" parent="."]
margin_left = 700.0
margin_top = 250.0
margin_right = 1160.0
margin_bottom = 710.0
grow_horizontal = 2
grow_vertical = 2

[node name="SetbackSignal" type="Panel" parent="."]
margin_left = 870.0
margin_top = 420.0
margin_right = 990.0
margin_bottom = 540.0

[node name="Character" parent="." instance=ExtResource( 2 )]
position = Vector2( 230, 920 )

[node name="Floor" parent="." instance=ExtResource( 3 )]
position = Vector2( 1010, 1070 )

[node name="SoundNodes" type="Node" parent="."]

[node name="Rythm" type="AudioStreamPlayer" parent="SoundNodes"]
stream = ExtResource( 4 )

[node name="Setback" type="AudioStreamPlayer" parent="SoundNodes"]
stream = ExtResource( 5 )
